logs/2021-07-23_08-10-14.txt
npm WARN discord_bot@1.0.0 No repository field.

audited 446 packages in 3.976s

39 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities

/home/minecraft/multicraft/servers/server200444/commands/userinfo.js:17
            const userFlags = (await member.user.fetchFlags()).toArray();
                                     ^^^^^^

SyntaxError: Unexpected identifier
    at compileFunction (<anonymous>)
    at wrapSafe (internal/modules/cjs/loader.js:1047:16)
    at Module._compile (internal/modules/cjs/loader.js:1097:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (/home/minecraft/multicraft/servers/server200444/index.js:15:18)
    at Module._compile (internal/modules/cjs/loader.js:1133:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:74:12)
    at internal/main/run_main_module.js:18:47
